Fix horizontal scroll on safari mobile

--- a/_postcss/main.css
+++ b/_postcss/main.css
@@ -22,3 +22,8 @@ body {
     font-light
   ;
 }
+
+:root, html, body {
+    position: relative;
+    overflow-x: hidden;
+}
